--- a/react-auth-master/public/index.html
+++ b/react-auth-master/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>CoC</title>
-    <script type="text/javascript" src="http://www.gothere.sg/jsapi?sensor=false"></script> -->
+    <script type="text/javascript" src="http://www.gothere.sg/jsapi?sensor=false"></script> 
     <!-- <script type="text/javascript">
       gothere.load("maps");
       function initialize() {
